--- a/WebApplication1/Pages/Shared/_Layout.cshtml
+++ b/WebApplication1/Pages/Shared/_Layout.cshtml
@@ -101,14 +101,14 @@
                 </div>
             }
             
-            <main role="main" class="pb-3">
+            <main role="main">
                 @RenderBody()
             </main>
         </div>
     </div>
 
     <footer class="footer">
-        <div class="container">
+        <div class="container text-center">
             &copy; 2025 - Task Manager - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
