--- a/WebRazon/Pages/Shared/_Layout.cshtml
+++ b/WebRazon/Pages/Shared/_Layout.cshtml
@@ -198,68 +198,10 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-main">
-            <div class="container">
-                <div class="row">
-                    <!-- Columna 1 -->
-                    <div class="col-md-4 col-6 mb-4 mb-md-0">
-                        <h5>Gestión de Tareas</h5>
-                        <ul>
-                            <li><a href="#">Tareas Pendientes</a></li>
-                            <li><a href="#">Tareas Completadas</a></li>
-                            <li><a href="#">Tareas Importantes</a></li>
-                            <li><a href="#">Calendario</a></li>
-                            <li><a href="#">Categorías</a></li>
-                        </ul>
-                    </div>
-
-                    <!-- Columna 2 -->
-                    <div class="col-md-4 col-6 mb-4 mb-md-0">
-                        <h5>Ayuda</h5>
-                        <ul>
-                            <li><a href="#">Centro de Ayuda</a></li>
-                            <li><a href="#">Tutorial</a></li>
-                            <li><a href="#">Preguntas Frecuentes</a></li>
-                            <li><a href="#">Soporte Técnico</a></li>
-                            <li><a href="#">Contáctanos</a></li>
-                        </ul>
-                    </div>
-
-                    <!-- Columna 3 -->
-                    <div class="col-md-4 mt-4 mt-md-0">
-                        <h5>Conéctate con nosotros</h5>
-                        <div class="social-icons mb-3">
-                            <a href="#" title="Facebook"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
-                            <a href="#" title="Instagram"><i class="fab fa-instagram"></i></a>
-                            <a href="#" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                            <a href="#" title="YouTube"><i class="fab fa-youtube"></i></a>
-                        </div>
-                        <p>Descarga nuestra aplicación móvil:</p>
-                        <div class="d-flex mt-2">
-                            <a href="#" class="me-2"><i class="fab fa-apple fa-2x"></i></a>
-                            <a href="#"><i class="fab fa-android fa-2x"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="copyright">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        <p class="mb-0">&copy; @DateTime.Now.Year - TaskManager - Todos los derechos reservados
-                        </p>
-                    </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <a href="#" class="me-3">Términos de Servicio</a>
-                        <a href="#">Política de Privacidad</a>
-                    </div>
-                </div>
-            </div>
+    <!-- Footer simplificado -->
+    <footer class="simple-footer">
+        <div class="container text-center">
+            <p>&copy; @DateTime.Now.Year - Task Manager - <a asp-area="" asp-page="/Privacy">Privacy</a></p>
         </div>
     </footer>
 
