--- a/WebRazon/Pages/_ViewImports.cshtml
+++ b/WebRazon/Pages/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using WebRazon
 @using WebRazon.Models
 @using WebRazon.Services
+@using X.PagedList
+@using X.PagedList.Mvc.Core
 @namespace WebRazon.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
